--- a/limechat/kud.yaml
+++ b/limechat/kud.yaml
@@ -1,12 +1,13 @@
 log-view:
-  nickname-format: '%n ➤ '
+  nickname-format: '%n ≻ '
   scroller-highlight-color: '#c2339a'
 input-text:
   # font-family: 'Menlo'
   font-family: 'Ubuntu Mono'
   # font-size: 12.0
   font-size: 14.0
-  background-color: '#26292C'
+  # background-color: '#26292C'
+  background-color: '#111'
   color: '#fff'
 member-list:
   # font-family: 'Menlo'
