Update limechat theme.

--- a/limechat/kud.yaml
+++ b/limechat/kud.yaml
@@ -2,43 +2,34 @@ log-view:
   nickname-format: '%n ≻ '
   scroller-highlight-color: '#c2339a'
 input-text:
-  # font-family: 'Menlo'
   font-family: 'Ubuntu Mono'
-  # font-size: 12.0
   font-size: 14.0
-  # background-color: '#26292C'
   background-color: '#111'
   color: '#fff'
 member-list:
-  # font-family: 'Menlo'
   font-family: 'Ubuntu Mono'
-  # font-size: 12.0
   font-size: 14.0
-  # color: '#688790'
   color: 'white'
   background-color: '#26292C'
   operator:
     color: '#85abb5'
   selected:
-    # color: '#688790'
     color: 'white'
     background:
       top-line-color: '#273146'
       bottom-line-color: '#273146'
-      top-color: '#273146
+      top-color: '#273146'
       bottom-color: '#273146'
 server-tree:
-  # font-family: 'Menlo'
   font-family: 'Ubuntu Mono'
-  # font-size: 12.0
   font-size: 14.0
   background-color: '#26292C'
   highlight:
-    color: '#72AACA'
+    color: '#DE4A3E'
   newtalk:
-    color: '#88c26b'
+    color: '#DE4A3E'
   unread:
-    color: '#688790'
+    color: '#AAD877'
   normal:
     active:
       color: 'white'
@@ -50,7 +41,7 @@ server-tree:
     inactive:
       color: 'white'
     background:
-      top-line-color: '#273146'
-      bottom-line-color: '#273146'
-      top-color: '#273146'
-      bottom-color: '#273146'
+      top-color: '#1A1A1A'
+      top-line-color: '#1A1A1A'
+      bottom-color: '#1A1A1A'
+      bottom-line-color: '#E44B3B'
